# uberbyte.rs

./: Cargo.toml  LICENSE  README.md  run_all_examples.sh
.github/workflows/: ci.yml  publish.yml
examples/: README.md  check_mask_set.rs  command_byte_array.rs  create.rs  decode_command_response.rs  formatters.rs  set.rs  set_clear_flip.rs  shift.rs  simple.rs
src/: byte_array.rs  lib.rs  uberbyte.rs
src/uberbyte/: formatters.rs  try_from.rs
