[package]
name = "uberbyte"
version = "0.0.1"
edition = "2021"
authors = ["Dejan Fajfar <dejan@fajfar.com>"]
license = "MIT"
repository = "https://github.com/dejanfajfar/uberbyte.rs"
description = "Byte manipulation for dummies"
readme = "CARGO_README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
