[package]
name = "uberbyte"
version = "0.6.1"
edition = "2021"
authors = ["Dejan Fajfar <dejan@fajfar.com>"]
license = "MIT"
repository = "https://github.com/dejanfajfar/uberbyte.rs"
description = "Bit manipulation for dummies"
keywords = ["bit", "shift", "library", "easy", "utility"]
autoexamples = true
categories = ["data-structures", "parsing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "uberbyte"
path = "src/lib.rs" 
test = true         
doctest = true      
bench = true        
doc = true          
crate-type = ["lib"]

[dependencies]
